--- a/public/index.html
+++ b/public/index.html
@@ -170,70 +170,85 @@
     <section class="como_funciona py-5">
       <div class="container text-center">
         <h2 class="mb-5">¿Como funciona?</h2>
-        <div class="row justify-content-center">
-          <div class="col bg-light p-3">
+        <div class="row">
+          <div class="col">
             <img
               src="./img/portada_4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
+            <div class="cf_content_number">
+              <div class="linea_lT"></div>
+              <div class="cf_number">1</div>
+              <div class="linea_r"></div>
+            </div>
             <h6>Damos de alta a tu empresa en nuestra plataforma</h6>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
             </p>
           </div>
-          <div class="col bg-light p-3">
+          <div class="col">
             <img
               src="./img/portada_4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
+            <div class="cf_content_number">
+              <div class="linea_l"></div>
+              <div class="cf_number">2</div>
+              <div class="linea_r"></div>
+            </div>
             <h6>Alamano coordina con un técnico calificado</h6>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
             </p>
           </div>
-          <div class="col bg-light p-3">
+          <div class="col">
             <img
               src="./img/portada_4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
+            <div class="cf_content_number">
+              <div class="linea_l"></div>
+              <div class="cf_number">3</div>
+              <div class="linea_r"></div>
+            </div>
             <h6>Técnico asiste para realizar el servicio solicitado</h6>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
             </p>
           </div>
-          <div class="col bg-light p-3">
+          <div class="col">
             <img
               src="./img/portada_4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
+            <div class="cf_content_number">
+              <div class="linea_l"></div>
+              <div class="cf_number">4</div>
+              <div class="linea_r"></div>
+            </div>
             <h6>Accedes a la plataforma para ver detalle del servicio</h6>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
             </p>
           </div>
-          <div class="col bg-light p-3">
+          <div class="col">
             <img
               src="./img/portada_4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
+            <div class="cf_content_number">
+              <div class="linea_l"></div>
+              <div class="cf_number">5</div>
+              <div class="linea_rT"></div>
+            </div>
             <h6>Listo tareas resueltas!</h6>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
             </p>
           </div>
         </div>
